# arrow-datafusion

./: Cargo.toml
datafusion/sinks/: Cargo.toml
datafusion/sinks/src/: api.rs  lib.rs
datafusion/sinks/src/codecs/: json.rs  mod.rs
datafusion/sinks/src/kafka/: config.rs  mod.rs  request.rs  service.rs  sink.rs
datafusion/sinks/tests/: integration_test.rs
datafusion/sinks/tests/docker/: kafka-service.yaml
