# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-sinks"
description = "DataFusion Sinks"
version = "0.1.0"
homepage = "https://github.com/apache/arrow-datafusion"
repository = "https://github.com/apache/arrow-datafusion"
readme = "README.md"
license = "Apache-2.0"
keywords = ["datafusion", "sinks", "kafka"]
edition = "2021"
rust-version = "1.62"

[lib]
name = "datafusion_sinks"
path = "src/lib.rs"

[dependencies]
rdkafka = "0.29.0"
tracing = "0.1.34"
serde = "1.0.152"
serde_json = "1.0.91"
chrono = { version = "0.4.22", default-features = false, features = ["serde"] }
bytes = { version = "1.3.0", default-features = false, features = ["serde"] }
async-trait = { version = "0.1.61", default-features = false }
tokio = {version = "1.24.1", features = ["full"]}
tokio-util = { version = "0.7.4", features = ["full"] }
snafu = "0.7.4"
tower = { version = "0.4", features = ["full"] }
futures = { version = "0.3.25", default-features = false, features = ["compat", "io-compat"], package = "futures" }
futures-core = "0.3.25"

[dev-dependencies]
rand = "0.8.4"
awaitility = "0.3"


